--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,24 +1,39 @@
-@charset "UTF-8";
+$primary: rgba(13, 50, 77, 1);
+$dark: rgba(14, 8, 0, 1);
+$light: rgba(157, 162, 171, 1);
+$shadow: rgba(104, 104, 104, 0.8);
+$text: #fff;
+
 /* CSS for Scrollmagic */
 .reveal {
   opacity: 0;
   -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
   transform: scale(0.9);
   -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
-
 .reveal.visible {
   opacity: 1;
   -webkit-transform: none;
+  -moz-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
   transform: none;
 }
 
 /* CSS for IE 11 og 10 */
+
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .wrapper {
     display: none !important;
   }
+
   .ieonly {
     display: block !important;
     text-align: center;
@@ -27,21 +42,20 @@
 
 html {
   font-family: Arial, Helvetica, sans-serif;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: #fff;
+  box-sizing: border-box;
+  color: $text;
   scroll-behavior: smooth;
 }
 
 body {
-  background: #fff;
+  background: $text;
   margin: 30px 50px;
   line-height: 1.4;
 }
 
 .btn {
-  background: #0e0800;
-  color: #fff;
+  background: $dark;
+  color: $text;
   padding: 0.6rem 1.3rem;
   text-decoration: none;
   border: 0;
@@ -52,51 +66,46 @@ img {
 }
 
 .wrapper {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
 }
 
 /* Navigering */
+
 .main-nav {
-  background: #0e0800;
+  background: $dark;
 }
 
 .main-nav ul {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
   padding: 0px;
   list-style: none;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .main-nav a {
-  background: #0e0800;
+  background: $dark;
   display: block;
   text-decoration: none;
   padding: 0.8rem;
   text-align: center;
-  color: #fff;
+  color: $text;
   text-transform: uppercase;
   font-size: 1.1rem;
 }
 
 /* Topp Kontainer */
 .topp-kontainer {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-      grid-template-areas: 'showcase showcase top-box-a' 'showcase showcase top-box-a';
+  grid-template-areas:
+    'showcase showcase top-box-a'
+    'showcase showcase top-box-a';
 }
 
 /* Showcase */
 .showcase {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: showcase;
   min-height: 100px;
   /*max-height: 200px;*/
@@ -104,46 +113,32 @@ img {
   background-size: cover;
   background-position: center;
   padding: 3rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  box-shadow: $shadow;
 }
 
 .showcase h2 {
   font-size: 4rem;
   margin-bottom: 0;
-  color: #fff;
+  color: $text;
 }
 
 .showcase p {
   font-size: 1.3rem;
   margin-top: 0;
-  color: #fff;
+  color: $text;
 }
 
 /* Top Box */
 .top-box {
-  background: #0d324d;
-  display: -ms-grid;
+  background: $primary;
   display: grid;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   justify-items: center;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  box-shadow: $shadow;
   padding: 1.5rem;
 }
 
@@ -152,9 +147,6 @@ img {
 }
 
 .top-box-a {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 3;
   grid-area: top-box-a;
 }
 
@@ -163,12 +155,11 @@ img {
 }
 
 /* Bokser */
+
 .bokser {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .bokser .fab {
@@ -176,36 +167,30 @@ img {
 }
 
 .boks {
-  background: #0d324d;
+  background: $primary;
   text-align: center;
   padding: 1.5rem 2rem;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  box-shadow: $shadow;
 }
 
 /* Info */
 .info {
-  background: #0d324d;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
-  display: -ms-grid;
+  background: $primary;
+  box-shadow: $shadow;
   display: grid;
   grid-gap: 30px;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   padding: 3rem;
 }
 
 /* Portefølje */
+
 .portfolio-content {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  background: #0d324d;
-  color: #fff;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  grid-template-columns: 1fr;
+  background: $primary;
+  color: $text;
+  box-shadow: $shadow;
 }
 
 .boks p {
@@ -221,15 +206,12 @@ img {
 }
 
 .portfolio-header {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
   /* background: $primary; */
-  background: #0e0800;
-  color: #fff;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  background: $dark;
+  color: $text;
+  box-shadow: $shadow;
 }
 
 h3,
@@ -239,39 +221,36 @@ h3,
 }
 
 .portfolio {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   /*grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));*/
 }
 
 .portfolio img {
   width: auto;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  box-shadow: $shadow;
   max-height: 300px;
 }
 
 /* Footer */
 footer {
   margin-top: 2rem;
-  background: #0e0800;
-  color: #fff;
+  background: $dark;
+  color: $text;
   text-align: center;
   padding: 1rem;
 }
 
 /* Animasjoner */
+
 /* Sweep To Top */
 .hvr-sweep-to-top {
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
   -webkit-transition-property: color;
   transition-property: color;
@@ -293,10 +272,7 @@ footer {
   -webkit-transform-origin: 50% 100%;
   transform-origin: 50% 100%;
   -webkit-transition-property: transform;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
   transition-property: transform;
-  transition-property: transform, -webkit-transform;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-timing-function: ease-out;
@@ -322,8 +298,7 @@ footer {
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
   overflow: hidden;
 }
@@ -353,13 +328,12 @@ footer {
 }
 
 /* Media Queries */
+
 @media (min-width: 740px) and (max-width: 960px) {
   .bokser {
-    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
@@ -367,6 +341,7 @@ footer {
   .main-nav li:first-of-type {
     border-left: none;
   }
+
   .main-nav li {
     /*border-left: 1px solid #fff;*/
     border-left: 1px solid rgba(255, 255, 255, 0.5);
@@ -377,38 +352,43 @@ footer {
   .main-nav {
     background: none;
   }
+
   .topp-kontainer {
-        grid-template-areas: 'showcase showcase' 'top-box-a top-box-a';
+    grid-template-areas:
+      'showcase showcase'
+      'top-box-a top-box-a';
   }
+
   .top-box-a {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .top-box-a a {
     padding: 15px;
   }
+
   .showcase h1 {
     font-size: 2.5rem;
   }
+
   .main-nav ul {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .info {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .info .btn {
     display: block;
     text-align: center;
     margin: auto;
   }
+
   .portfolio {
-    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -416,31 +396,33 @@ footer {
   .main-nav {
     background: none;
   }
+
   .portfolio {
-    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .topp-kontainer {
-        grid-template-areas: 'showcase' 'top-box-a';
+    grid-template-areas:
+      'showcase'
+      'top-box-a';
   }
+
   .top-box-a a {
     padding: 15px;
   }
+
   .top-box-a {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .showcase h1,
   .showcase p {
     text-align: center;
   }
+
   .showcase {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
 }
-/*# sourceMappingURL=styles.css.map */
