--- a/css/styles.scss
+++ b/css/styles.scss
@@ -25,6 +25,7 @@
 }
 
 /* CSS for IE 11 og 10 */
+// TODO Extract to Mixins
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .wrapper {
