--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,6 @@
-// TODO Replace with @use
+// TODO Replace with @use and clean up folder-structure
 @import 'variabler';
+@import "../css/scss/hover.scss";
 
 /* CSS for Scrollmagic */
 .reveal {
@@ -105,8 +106,7 @@ img {
 /* Showcase */
 .showcase {
   grid-area: showcase;
-  min-height: 100px;
-  /*max-height: 200px;*/
+  min-height: 100px;  
   background: url(../img/background.jpg);
   background-size: cover;
   background-position: center;
@@ -221,8 +221,7 @@ h3,
 .portfolio {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(2, 1fr);
-  /*grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));*/
+  grid-template-columns: repeat(2, 1fr);  
 }
 
 .portfolio img {
@@ -240,92 +239,8 @@ footer {
   padding: 1rem;
 }
 
-/* Animasjoner */
-
-/* Sweep To Top */
-.hvr-sweep-to-top {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-}
-
-.hvr-sweep-to-top:before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: var(--light);
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.hvr-sweep-to-top:hover,
-.hvr-sweep-to-top:focus,
-.hvr-sweep-to-top:active {
-  color: white;
-}
-
-.hvr-sweep-to-top:hover:before,
-.hvr-sweep-to-top:focus:before,
-.hvr-sweep-to-top:active:before {
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-}
-
-/* Overline From Center */
-.hvr-overline-from-center {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  overflow: hidden;
-}
-
-.hvr-overline-from-center:before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  left: 51%;
-  right: 51%;
-  top: 0;
-  background: var(--light);
-  height: 4px;
-  -webkit-transition-property: left, right;
-  transition-property: left, right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.hvr-overline-from-center:hover:before,
-.hvr-overline-from-center:focus:before,
-.hvr-overline-from-center:active:before {
-  left: 20px;
-  right: 20px;
-}
-
 /* Media Queries */
+// TODO Extract to mixins
 
 @media (min-width: 740px) and (max-width: 960px) {
   .bokser {
@@ -340,8 +255,7 @@ footer {
     border-left: none;
   }
 
-  .main-nav li {
-    /*border-left: 1px solid #fff;*/
+  .main-nav li {    
     border-left: 1px solid rgba(255, 255, 255, 0.5);
   }
 }
@@ -423,4 +337,11 @@ footer {
   .showcase {
     align-items: center;
   }
+}
+
+.hvr-overline-from-center:hover:before,
+.hvr-overline-from-center:focus:before,
+.hvr-overline-from-center:active:before {
+  left: 20px;
+  right: 20px;
 }
