@import '../css/hover/hover';

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,6 @@
 // TODO Replace with @use and clean up folder-structure
 @import 'variabler';
-@import '../css/hover/hover.scss';
+@import '../css/hover/hover';
 
 /* CSS for Scrollmagic */
 .reveal {
