--- a/css/styles.css
+++ b/css/styles.css
@@ -1,96 +1,14 @@
 @charset "UTF-8";
-/*!
- * Hover.css (http://ianlunn.github.io/Hover/)
- * Version: 2.3.2
- * Author: Ian Lunn @IanLunn
- * Author URL: http://ianlunn.co.uk/
- * Github: https://github.com/IanLunn/Hover
-
- * Hover.css Copyright Ian Lunn 2017. Generated with Sass.
- */
-/* Sweep To Top */
-.hvr-sweep-to-top {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+/* Effekter */
+.fade {
+  -webkit-transition: background-color 500ms;
+  transition: background-color 500ms;
+}
+.fade:hover {
+  background-color: #9da2ab;
 }
 
-.hvr-sweep-to-top:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #9da2ab;
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
-  -webkit-transition-property: transform;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
-  color: white;
-}
-
-.hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-}
-
-/* Overline From Center */
-.hvr-overline-from-center {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  overflow: hidden;
-}
-
-.hvr-overline-from-center:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 51%;
-  right: 51%;
-  top: 0;
-  background: #9da2ab;
-  height: 4px;
-  -webkit-transition-property: left, right;
-  transition-property: left, right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.hvr-overline-from-center:hover:before, .hvr-overline-from-center:focus:before, .hvr-overline-from-center:active:before {
-  left: 0;
-  right: 0;
-}
-
-/* CSS for Scrollmagic */
+/* CSS for Scrollmagic  */
 .reveal {
   opacity: 0;
   -webkit-transform: scale(0.9);
@@ -110,12 +28,12 @@
   .wrapper {
     display: none !important;
   }
+
   .ieonly {
     display: block !important;
     text-align: center;
   }
 }
-
 html {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-box-sizing: border-box;
@@ -143,7 +61,6 @@ img {
 }
 
 .wrapper {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
 }
@@ -152,17 +69,13 @@ img {
 .main-nav {
   background: #0e0800;
 }
-
 .main-nav ul {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-  padding: 0px;
+  padding: 0px 20px 0px 20px;
   list-style: none;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
-
 .main-nav a {
   background: #0e0800;
   display: block;
@@ -176,18 +89,13 @@ img {
 
 /* Topp Kontainer */
 .topp-kontainer {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-      grid-template-areas: 'showcase showcase top-box-a' 'showcase showcase top-box-a';
+  grid-template-areas: "showcase showcase top-box-a" "showcase showcase top-box-a";
 }
 
 /* Showcase */
 .showcase {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: showcase;
   min-height: 100px;
   background: url(../img/background.jpg);
@@ -210,13 +118,11 @@ img {
   -webkit-box-shadow: rgba(104, 104, 104, 0.8);
           box-shadow: rgba(104, 104, 104, 0.8);
 }
-
 .showcase h2 {
   font-size: 4rem;
   margin-bottom: 0;
   color: #fff;
 }
-
 .showcase p {
   font-size: 1.3rem;
   margin-top: 0;
@@ -226,7 +132,6 @@ img {
 /* Top Box */
 .top-box {
   background: #0d324d;
-  display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -236,31 +141,23 @@ img {
           box-shadow: rgba(104, 104, 104, 0.8);
   padding: 1.5rem;
 }
-
 .top-box .price {
   font-size: 2.5rem;
 }
 
 .top-box-a {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 3;
   grid-area: top-box-a;
 }
-
 .top-box-a a {
   color: #fff;
 }
 
 /* Bokser */
 .bokser {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
-
 .bokser .fab {
   padding: 10px;
 }
@@ -278,20 +175,16 @@ img {
   background: #0d324d;
   -webkit-box-shadow: rgba(104, 104, 104, 0.8);
           box-shadow: rgba(104, 104, 104, 0.8);
-  display: -ms-grid;
   display: grid;
   grid-gap: 30px;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   padding: 3rem;
 }
 
 /* Portefølje */
 .portfolio-content {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+  grid-template-columns: 1fr;
   background: #0d324d;
   color: #fff;
   -webkit-box-shadow: rgba(104, 104, 104, 0.8);
@@ -311,11 +204,8 @@ img {
 }
 
 .portfolio-header {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  /* background: $primary; */
+  grid-template-columns: 1fr;
   background: #0e0800;
   color: #fff;
   -webkit-box-shadow: rgba(104, 104, 104, 0.8);
@@ -329,13 +219,10 @@ h3,
 }
 
 .portfolio {
-  display: -ms-grid;
   display: grid;
   grid-gap: 20px;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
-
 .portfolio .portfolio img {
   width: auto;
   -webkit-box-shadow: rgba(104, 104, 104, 0.8);
@@ -355,98 +242,92 @@ footer {
 /* Media Queries */
 @media (min-width: 740px) and (max-width: 960px) {
   .bokser {
-    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
-
 @media (min-width: 700px) {
   .main-nav li:first-of-type {
     border-left: none;
   }
+
   .main-nav li {
     border-left: 1px solid rgba(255, 255, 255, 0.5);
   }
 }
-
 @media (max-width: 700px) {
   .main-nav {
     background: none;
   }
+
   .topp-kontainer {
-        grid-template-areas: 'showcase showcase' 'top-box-a top-box-a';
+    grid-template-areas: "showcase showcase" "top-box-a top-box-a";
   }
+
   .top-box-a {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .top-box-a a {
     padding: 15px;
   }
+
   .showcase h1 {
     font-size: 2.5rem;
   }
+
   .main-nav ul {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .info {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .info .btn {
     display: block;
     text-align: center;
     margin: auto;
   }
+
   .portfolio {
-    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
-
 @media (max-width: 500px) {
   .main-nav {
     background: none;
   }
+
   .portfolio {
-    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .topp-kontainer {
-        grid-template-areas: 'showcase' 'top-box-a';
+    grid-template-areas: "showcase" "top-box-a";
   }
+
   .top-box-a a {
     padding: 15px;
   }
+
   .top-box-a {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
+
   .showcase h1,
-  .showcase p {
+.showcase p {
     text-align: center;
   }
+
   .showcase {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
 }
-
-.hvr-overline-from-center:hover:before,
-.hvr-overline-from-center:focus:before,
-.hvr-overline-from-center:active:before {
-  left: 20px;
-  right: 20px;
-}
-/*# sourceMappingURL=styles.css.map */
