--- a/scss/styles.css
+++ b/scss/styles.css
@@ -205,6 +205,10 @@ footer {
   background-color: #9da2ab;
 }
 
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-box-sizing: border-box;
@@ -217,6 +221,7 @@ body {
   background: #fff;
   margin: 30px 50px;
   line-height: 1.4;
+  padding: 20px;
 }
 
 .btn {
