--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,8 @@
   }
 }
 
+* { font-family: Arial, Helvetica, sans-serif;}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
@@ -19,10 +21,13 @@ html {
   scroll-behavior: smooth;
 }
 
+
+
 body {
   background: variabler.$text;
   margin: 30px 50px;
   line-height: 1.4;
+  padding: 20px;
 }
 
 .btn {
