Center Captcha Div

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -228,6 +228,15 @@ footer {
           justify-content: center;
 }
 
+.captcha {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 /* Effekter */
 .fade {
   -webkit-transition: background-color 500ms;
