Add reveal to contact form

--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -36,7 +36,7 @@
   .topp-kontainer {
     grid-template-areas:
       'showcase showcase'
-      'top-box-a top-box-a';
+      'top-box-a top-box-a' !important;
   }
 
   .top-box-a {
@@ -86,7 +86,7 @@
   .topp-kontainer {
     grid-template-areas:
       'showcase'
-      'top-box-a';
+      'top-box-a' !important;
   }
 
   .top-box-a a {
