Subheader on portfolio
Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet med siden.

--- a/scss/mixins/_portefolje.scss
+++ b/scss/mixins/_portefolje.scss
@@ -1,5 +1,10 @@
 /* Portefølje */
 @use 'variabler' as variabler;
+.portfolio-header {
+h4 {
+	text-align: center;
+}
+}
 
 .portfolio-content {
   display: grid;
