--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -29,6 +29,10 @@
 }
 
 @media (max-width: 700px) {
+  .showcase {
+    justify-content: center !important;
+  }
+
   .main-nav {
     background: none;
   }
