--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -29,8 +29,10 @@
 }
 
 @media (max-width: 700px) {
+ 
+
   .showcase {
-    justify-content: center !important;
+    align-items: center !important;
   }
 
   .main-nav {
